--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="signUpMail">signUpMail</string>
     <string name="signUpPassword">signUpPassword</string>
     <string name="logo">logo</string>
+    <string name="aviothic">Aviothic</string>
 </resources>
